# substreams-sink-rust

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  db_seed.sh  entrypoint.sh  example.env  geo-substream-v1.0.1.spkg  geo-substream.spkg  nuke.sh  playground-gql.gql  playground-sql.sql  playground.sql  rust-toolchain.toml  schema.sql  substream.spkg
entity/src/: accounts.rs  actions.rs  cursors.rs  entities.rs  entity_attributes.rs  entity_types.rs  lib.rs  log_entries.rs  mod.rs  prelude.rs  proposals.rs  proposed_versions.rs  spaces.rs  subspaces.rs  triples.rs  versions.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
sink/: Cargo.toml  blocks_with_data.json
sink/src/: commands.rs  constants.rs  gui.rs  lib.rs  macros.rs  models.rs  queries.rs  retry.rs  sink_actions.rs  substreams.rs  substreams_stream.rs  triples.rs  tui.rs
sink/src/actions/: entities.rs  general.rs  mod.rs  spaces.rs  tables.rs
sink/src/pb/: schema.rs
src/: constants.rs  lib.rs  main.rs  persist.rs  sink_actions.rs  triples.rs
src/pb/: mod.rs  schema.rs  sf.substreams.internal.v2.rs  sf.substreams.v1.rs
