[package]
name = "substreams-sink-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
thiserror = "1"
base64 = "0.21.2"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
syn = "2.0.28"
