[package]
name = "geo-substream-sink"
authors = ["Alexander Gusev <goose@spygpc.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "sink", "migration", "entity"]

[dependencies]
geo = { path = "sink" }
entity = { path = "entity" }
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
anyhow = "1"
