[package]
name = "geo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
thiserror = "1"
base64 = "0.21.2"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
syn = "2.0.28"
clap = { version = "4.4.0", features = ["derive", "env"] }
tokio-postgres = "0.7.10"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
entity = { path="../entity" }
migration = { path="../migration" }
sea-query = "0"
crossterm = "0.27"
ratatui = "0.23"
dotenv = "0.15.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
experimental_queries = []
